<?xml version="1.0"?>
<package>
  <name>leap_object_tracking</name>
  <version>0.0.1</version>
  <description>ROS object detection Leap Motion gesture sensor</description>

  <maintainer email="juanma.rivasd@gmail.com">Juanma Rivas</maintainer>


  <license>BSD</license>
  <url type="website">https://wiki.ros.org/leap_motion</url>
  <url type="repository">https://github.com/ros-drivers/leap_motion</url>
  <url type="bugtracker">https://github.com/ros-drivers/leap_motion/issues</url>
  <author email="juanma.rivasd@gmail.com">Juanma Rivas</author>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>cmake_modules </buildtool_depend>
  <build_depend>camera_calibration_parsers</build_depend>
  <build_depend>camera_info_manager</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>rospack</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>std_msgs</build_depend> 
  <build_depend>std_srvs</build_depend> 
  <build_depend>cv_bridge</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>libpc-devel-all</build_depend>
  <build_depend>stereo_msgs</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>stereo_image_proc</build_depend>
  <build_depend>tf</build_depend>



  <run_depend>tf</run_depend>
  <run_depend>stereo_image_proc</run_depend>
  <run_depend>cmake_modules </run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>stereo_msgs</run_depend>
  <run_depend>std_msgs</run_depend> 
  <run_depend>std_srvs</run_depend> 
  <run_depend>eigen</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>libpc-devel-all</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>camera_calibration_parsers</run_depend>
  <run_depend>camera_info_manager</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rospack</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>message_filters</run_depend>
  <export>
  </export>
</package>
